Fix full screen image height overflow bug

--- a/www/style_v22.css
+++ b/www/style_v22.css
@@ -545,7 +545,7 @@ html {
 
 .fs-img {
     width: 100%;
-    height: 100vh;
+    height: 100%;
     object-fit: contain;
 }
 
@@ -939,12 +939,14 @@ html {
     align-items: center;
     overflow: hidden;
     position: relative;
-    height: 100vh;
+    height: 100%;
+    min-height: 0;
+    min-width: 0;
 }
 
 .fs-img {
-    max-width: 100%;
-    max-height: 100%;
+    width: 100%;
+    height: 100%;
     object-fit: contain;
 }
 
